--- a/index.html
+++ b/index.html
@@ -1,1 +1,179 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="Raf Vantongerloo's Portfolio">
+    <meta name="keywords" content="Raf Vantongerloo, Personal Website, Personal Blog, Identity, Project Website, Portfolio">
+    <meta name="author" content="Raf Vantongerloo">
+    <link rel="icon" href="images/Developer_100.png">
+        <!-- Open Graphic Tags -->
+    <meta property="fb:app_id" content="" />
+    <meta property="og:title" content="">
+    <meta property="og:url" content="">
+    <meta property="og:description" content="Raf Vantongerloo's Portfolio">
+    <meta property="og:image" content="">
+    <link rel="apple-touch-icon" sizes="180x180" href="">
+    <link rel="icon" type="image/png" href="" sizes="32x32">
+    <link rel="icon" type="image/png" href="" sizes="16x16">
+    <link rel="shortcut icon" href="">
+    <meta name="theme-color" content="#000000">
+  <title>Raf Vantongerloo | Portfolio</title>
+
+  <!-- CSS files -->
+  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="css/style.css" rel="stylesheet">
+
+</head>
+<body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" style="display: -webkit-inline-box;" href="#">
+        <span>Raf Vantongerloo</span></a>
+    </div>
+  <div class="collapse navbar-collapse" id="myNavbar">
+    <ul class="nav navbar-nav navbar-right">
+      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#about-me-section">About Me</a></li>
+      <li><a href="#projects-section">Projects</a></li>
+    </ul>
+  </div>
+  </div>
+</nav>
+<!-- Landing page container -->
+<div class="container landing-page parallax" style="padding-top:50px" id="home-section">
+  <div></div>
+  <div class="title-name">
+    <img src="images/cartoon1.jpg" class="title-image" height="100" width="100">
+    <h2>Raf Vantongerloo</h2>
+  <hr>
+  <h4 class="typing-tags">Android Developer | Entrepreneur | Blockchain Enthusiast</h4>
+  <div>
+</div>
+<div class="social-icons">
+<a href="https://github.com/r4fken" target="_blank"><i class="fa fa-github fa-3x"></i></a>
+<a href="https://www.linkedin.com/in/rafvantongerloo" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+<a href="https://angel.co/rafvantongerloo" target="_blank"><i class="fa fa-angellist fa-3x"></i></a>
+<a href="https://twitter.com/rafvantongerloo" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
+<a href="https://plus.google.com/u/0/+RafVantongerloo" target="_blank"><i class="fa fa-google-plus fa-3x"></i></a>
+<a href="https://www.quora.com/profile/Raf-Vantongerloo" target="_blank"><i class="fa fa-quora fa-3x"></i></a>
+<a href="https://medium.com/@raf.vantongerloo" target="_blank"><i class="fa fa-medium fa-3x"></i></a>
+<a href="https://keybase.io/r4fken" target="_blank"><i class="fa fa-bitcoin fa-3x"></i></a>
+<a href="https://www.patreon.com/r4fken" target="_blank"><i class="fa fa-credit-card fa-3x"></i></a>
+<a href="http://buymeacoff.ee/r4fken" target="_blank"><i class="fa fa-coffee fa-3x"></i></a>
+</div>
+<a href="#about-me-section"><i class="fa fa-angle-double-down" style="font-size:36px"></i></a>
+</div>
+</div>
+<!-- About me container -->
+<div class="container about-me" id="about-me-section">
+<h3 class="section-header">About Me</h3>
+<hr class="section-hr">
+<p class="about-me-description">
+Starting Java / Android Developer<br><br>
+
+Actively looking for a full or part time position as a developer in which I can expand my current skillset. Note: I love Android, and I'm interested in IoT, blockchain, crypto, decentralization, AI, machine learning, ...<br><br>
+
+10 years of experience in engineering, construction and inspection of heat exchangers, pressure vessels, reactors, piping and supports according to TEMA, ASME, RToD, ATEX, PED, NACE, ESPN and RCC-MR in oil and gas, petrochemical and nuclear industries.<br><br>
+
+5 years of experience in digital marketing (SEO, SEM, SMM, geo-targeting, content marketing, strategy and implementation, outsourcing, commissioning merchandise, planning, project management, procurement of services, branding, Excel, Adwords, Analytics, Bing).<br><br>
+
+Bonus: commercial drive and experience, common sense and a pragmatic mindset.<br><br>
+
+I'm available for freelance/remote work, feel free to contact me!
+</p>
+<h3 class="section-header">Skills</h3>
+<hr class="section-hr">
+  <ul class="skills_div">
+    <li>Web Designing Skills:</li><br>
+    <p><span>HTML</span><span>CSS</span><span>Javascript</span></p><br>
+    <li>Programming Skills:</li><br>
+    <p><span>Java</span><span>Android</span><span>SQL</span><span>XML</span><span>UML</span></p><br>
+    <li>Technologies:</li><br>
+    <p><span>Git</span><span>Maven</span><span>JUnit</span><span>Android Studio</span><span>Spring</span></p>
+  </ul>
+<a href="#projects-section"><i class="fa fa-terminal" title="View Projects" aria-hidden="true" style="font-size:36px"></i></a>
+<hr class="section-end-hr">
+</div>
+<!-- \About me container -->
+
+
+<!-- Projects container -->
+<div class="container projects" id="projects-section">
+<h3 class="section-header">Projects</h3>
+<hr class="section-hr">
+<div class="projects_div">
+  <div class="project_subdiv" style="background-image:url(images/space3.jpg)">
+    <h3>"Oep de Haa" App</h3>
+    <p>The "Oep de Haa" App is a simple app that aims to preserve the local dialect of a small rural community in the Flemish part of Belgium, called "Veerle-Heide" (pronounced Veijel-Haa).</p>
+  </div>
+  <div class="project_subdiv" style="background-image:url(images/space3.jpg)">
+    <h3>My Portfolio Website</h3>
+    <p>Implemented as a GitHub Page, you're looking at it!<br><br>Basic HTML, CSS and JavaScript.</p>
+  </div>
+  <div class="project_subdiv" style="background-image:url(images/space3.jpg)">
+    <h3>Terrarium</h3>
+    <p>Terrarium is a variation on Conway's Game Of Life, implemented as a Java console application.</p>
+  </div>
+</div>
+<a href="#home-section"><i class="fa fa-angle-double-up" aria-hidden="true" style="font-size:36px"></i></a>
+<hr class="section-end-hr">
+</div>
+<!-- \Projects container -->
+
+  <!-- Javascript files -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script src="js/main.js"></script>
+  <script>
+  $(function(){
+  $(".dropdown").hover(
+          function() {
+              $('.dropdown-menu', this).stop( true, true ).fadeIn("fast");
+              $(this).toggleClass('open');
+              $('b', this).toggleClass("caret caret-up");
+          },
+          function() {
+              $('.dropdown-menu', this).stop( true, true ).fadeOut("fast");
+              $(this).toggleClass('open');
+              $('b', this).toggleClass("caret caret-up");
+          });
+  });
+  </script>
+  <script>
+$(document).ready(function(){
+// Add smooth scrolling to all links
+$("a").on('click', function(event) {
+
+  // Make sure this.hash has a value before overriding default behavior
+  if (this.hash !== "") {
+    // Prevent default anchor click behavior
+    event.preventDefault();
+
+    // Store hash
+    var hash = this.hash;
+
+    // Using jQuery's animate() method to add smooth page scroll
+    // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+    $('html, body').animate({
+      scrollTop: $(hash).offset().top
+    }, 800, function(){
+
+      // Add hash (#) to URL when done scrolling (default click behavior)
+      window.location.hash = hash;
+    });
+  } // End if
+});
+});
+</script>
+</body>
+</html>
