--- a/bakeandshake/index.html
+++ b/bakeandshake/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>Bake&Shake</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -50,6 +51,7 @@ body, html {
     }
 }
 </style>
+</head>
 <body>
 
 <!-- Navbar (sit on top) -->
@@ -144,37 +146,109 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="images/5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Fruitbiscuit">
+      <img src="images/5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Buffet">
+      <img src="images/6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/9.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Assortiment cupcakes">
+      <img src="images/9.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Trolls">
+      <img src="images/8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
     </div>
   </div>
+  <br>
+  <div class="w3-row-padding w3-center">
+    <div class="w3-col m3">
+      <img src="images/d12.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
 
+    <div class="w3-col m3">
+      <img src="images/d7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/d8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/d15.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+  </div>
+  <br>
+  <div class="w3-row-padding w3-center">
+    <div class="w3-col m3">
+      <img src="images/d17.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/d4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/d13.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/d14.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+  </div>
+  <br>
+  <div class="w3-row-padding w3-center">
+    <div class="w3-col m3">
+      <img src="images/d10.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/d2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/d1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/d11.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+  </div>
+  <br>
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <img src="images/7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Thibo">
+      <img src="images/7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/10.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Birthday biscuit">
+      <img src="images/10.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/19.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Unicorn regenboogbiscuit">
+      <img src="images/d9.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
     </div>
 
     <div class="w3-col m3">
-      <img src="images/12.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Roses">
+      <img src="images/12.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+  </div>
+  <br>
+  <div class="w3-row-padding w3-center w3-section">
+    <div class="w3-col m3">
+      <img src="images/d16.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/19.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/d18.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/d17.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
     </div>
   </div>
 </div>
@@ -207,10 +281,11 @@ body, html {
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
-	  <br><br><br>
+	  <br><br>
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Koning Boudewijnstraat 2, Scherpenheuvel-Zichem, België<br><br>
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> GSM: 0498 11 60 49<br><br>
-        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: <a href="mailto:info@bake-and-shake.com">info@bake-and-shake.com</a><br>
+        <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: <a href="mailto:info@bake-and-shake.com">info@bake-and-shake.com</a><br><br>
+		<i class="fa fa-facebook-official fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Volg ons op <a href="https://www.facebook.com/BakeShake-1632109637049522/">Facebook</a>!<br>
       </div>
     </div>
   </div>
@@ -219,9 +294,6 @@ body, html {
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>Terug naar boven</a>
-  <div class="w3-xlarge w3-section">
-    <a href="https://www.facebook.com/BakeShake-1632109637049522/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-  </div>
   <p><small>Website by <a href="http://www.rafvantongerloo.com" title="Raf Vantongerloo" target="_blank" class="w3-hover-text-green">RV</a>.</small></p>
 </footer>
  
