--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="Raf Vantongerloo's Portfolio">
     <meta name="keywords" content="Raf Vantongerloo, Personal Website, Personal Blog, Identity, Project Website, Portfolio">
     <meta name="author" content="Raf Vantongerloo">
@@ -19,7 +19,8 @@
     <link rel="icon" type="image/png" href="" sizes="16x16">
     <link rel="shortcut icon" href="">
     <meta name="theme-color" content="#000000">
-  <title>Raf Vantongerloo | Portfolio</title>
+	<meta name="title" content="Raf Vantongerloo | Portfolio">
+	<title>Raf Vantongerloo | Portfolio</title>
 
   <!-- CSS files -->
   <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +75,9 @@
 <a href="#about-me-section"><i class="fa fa-angle-double-down" style="font-size:36px"></i></a>
 </div>
 </div>
-<!-- About me container -->
+
+
+
 <div class="container about-me" id="about-me-section">
 <h3 class="section-header">About Me</h3>
 <hr class="section-hr">
@@ -94,8 +97,8 @@ I'm available for freelance/remote work, feel free to contact me!
 <h3 class="section-header">Skills</h3>
 <hr class="section-hr">
   <ul class="skills_div">
-    <li>Web Designing Skills:</li><br>
-    <p><span>HTML</span><span>CSS</span><span>Javascript</span></p><br>
+    <li>Web Design Skills:</li><br>
+    <p><span>HTML</span><span>CSS</span><span>Javascript</span><span>NodeJS</span></p><br>
     <li>Programming Skills:</li><br>
     <p><span>Java</span><span>Android</span><span>SQL</span><span>XML</span><span>UML</span></p><br>
     <li>Technologies:</li><br>
@@ -104,10 +107,9 @@ I'm available for freelance/remote work, feel free to contact me!
 <a href="#projects-section"><i class="fa fa-terminal" title="View Projects" aria-hidden="true" style="font-size:36px"></i></a>
 <hr class="section-end-hr">
 </div>
-<!-- \About me container -->
 
 
-<!-- Projects container -->
+
 <div class="container projects" id="projects-section">
 <h3 class="section-header">Projects</h3>
 <hr class="section-hr">
@@ -125,10 +127,26 @@ I'm available for freelance/remote work, feel free to contact me!
     <p>Terrarium is a variation on Conway's Game Of Life, implemented as a Java console application.</p>
   </div>
 </div>
+<div class="projects_div">
+  <div class="project_subdiv" style="background-image:url(images/space3.jpg)">
+    <h3>Bitcoin & Lightning Network full node</h3>
+    <p>I'm running a dedicated Xeon server from a spare room in my home as a full node supporting the Bitcoin network, and have recently added the Eclair implementation of the Lightning Network to it.
+	<br>My Lightning Node can be visited <a href="https://1ml.com/node/02b4a0d6540a7b6199115ccf851bb73ae776dbb5087d495830f6c3950b4346ee75" target="_blank"><strong>here</strong></a>.</p>
+  </div>
+  <div class="project_subdiv" style="background-image:url(images/space3.jpg)">
+    <h3>Bake-and-Shake.com</h3>
+    <p>With its base template looking suspiciously like the one I used for this Portfolio page (never fix what is not broken ;) ), I created the website for
+	<a href="http://www.bake-and-shake.com/" target="_blank"><strong>Bake-and-Shake</strong></a>, which is a project by a nephew of mine.<br><br>Basic HTML, CSS and some copy-paste.</p>
+  </div>
+  <div class="project_subdiv" style="background-image:url(images/space3.jpg)">
+    <h3>R4Fchain</h3>
+    <p>A fun exercise in "building your own blockchain" in JavaScript, thanks to <a href="https://www.udemy.com/build-a-blockchain-in-javascript/learn/v4/overview" target="_blank"><strong>Udemy</strong></a>.</p>
+  </div>
+</div>
 <a href="#home-section"><i class="fa fa-angle-double-up" aria-hidden="true" style="font-size:36px"></i></a>
 <hr class="section-end-hr">
 </div>
-<!-- \Projects container -->
+
 
   <!-- Javascript files -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
