--- a/bakeandshake/index.html
+++ b/bakeandshake/index.html
@@ -77,7 +77,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-medium w3-black w3-xlarge w3-wide w3-animate-opacity"><img src="images/logo.JPG" alt="logo bake&shake" width="50%" height="50%"></span>
+    <span class="w3-center w3-padding-medium w3-black w3-xlarge w3-wide w3-animate-opacity"><img src="images/new/logorond.JPG" alt="logo bake&shake" width="50%" height="50%"></span>
   </div>
 </div>
 
@@ -248,6 +248,38 @@ body, html {
     </div>
 
     <div class="w3-col m3">
+      <img src="images/new/7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+  </div>
+  <br>
+  <div class="w3-row-padding w3-center w3-section">
+    <div class="w3-col m3">
+      <img src="images/new/5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/new/6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/new/3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/new/4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+  </div>
+  <br>
+  <div class="w3-row-padding w3-center w3-section">
+    <div class="w3-col m3">
+      <img src="images/new/1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
+      <img src="images/new/2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
+    </div>
+
+    <div class="w3-col m3">
       <img src="images/d17.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="*">
     </div>
   </div>
@@ -285,7 +317,8 @@ body, html {
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Koning Boudewijnstraat 2, Scherpenheuvel-Zichem, België<br><br>
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> GSM: 0498 11 60 49<br><br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: <a href="mailto:info@bake-and-shake.com">info@bake-and-shake.com</a><br><br>
-		<i class="fa fa-facebook-official fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Volg ons op <a href="https://www.facebook.com/BakeShake-1632109637049522/">Facebook</a>!<br>
+		<i class="fa fa-facebook-official fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Volg ons op <a href="https://www.facebook.com/BakeShake-1632109637049522/">Facebook</a>!<br><br>
+		<i class="fa fa-eur fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Onze prijslijst vindt u <a href="images/new/prijslijst.jpg">hier</a>!<br>
       </div>
     </div>
   </div>
