--- a/bakeandshake/index.html
+++ b/bakeandshake/index.html
@@ -77,7 +77,7 @@ body, html {
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-medium w3-black w3-xlarge w3-wide w3-animate-opacity"><img src="images/new/logorond.JPG" alt="logo bake&shake" width="50%" height="50%"></span>
+    <span class="w3-center w3-padding-medium w3-black w3-xlarge w3-wide w3-animate-opacity"><img src="images/new/logorond.jpg" alt="logo bake&shake" width="50%" height="50%"></span>
   </div>
 </div>
 
