--- a/index.html
+++ b/index.html
@@ -57,20 +57,11 @@
     <img src="images/cartoon1.jpg" class="title-image" height="100" width="100">
     <h2>Raf Vantongerloo</h2>
   <hr>
-  <h4 class="typing-tags">Android Developer | Entrepreneur | Blockchain Enthusiast</h4>
+  <h4 class="typing-tags">Passionate about steel.</h4>
   <div>
 </div>
 <div class="social-icons">
-<a href="https://github.com/r4fken" target="_blank"><i class="fa fa-github fa-3x"></i></a>
 <a href="https://www.linkedin.com/in/rafvantongerloo" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
-<a href="https://angel.co/rafvantongerloo" target="_blank"><i class="fa fa-angellist fa-3x"></i></a>
-<a href="https://twitter.com/rafvantongerloo" target="_blank"><i class="fa fa-twitter fa-3x"></i></a>
-<a href="https://plus.google.com/u/0/+RafVantongerloo" target="_blank"><i class="fa fa-google-plus fa-3x"></i></a>
-<a href="https://www.quora.com/profile/Raf-Vantongerloo" target="_blank"><i class="fa fa-quora fa-3x"></i></a>
-<a href="https://medium.com/@raf.vantongerloo" target="_blank"><i class="fa fa-medium fa-3x"></i></a>
-<a href="https://keybase.io/r4fken" target="_blank"><i class="fa fa-bitcoin fa-3x"></i></a>
-<a href="https://www.patreon.com/r4fken" target="_blank"><i class="fa fa-credit-card fa-3x"></i></a>
-<a href="http://buymeacoff.ee/r4fken" target="_blank"><i class="fa fa-coffee fa-3x"></i></a>
 </div>
 <a href="#about-me-section"><i class="fa fa-angle-double-down" style="font-size:36px"></i></a>
 </div>
@@ -82,17 +73,7 @@
 <h3 class="section-header">About Me</h3>
 <hr class="section-hr">
 <p class="about-me-description">
-Starting Java / Android Developer<br><br>
 
-Actively looking for a full or part time position as a developer in which I can expand my current skillset. Note: I love Android, and I'm interested in IoT, blockchain, crypto, decentralization, AI, machine learning, ...<br><br>
-
-10 years of experience in engineering, construction and inspection of heat exchangers, pressure vessels, reactors, piping and supports according to TEMA, ASME, RToD, ATEX, PED, NACE, ESPN and RCC-MR in oil and gas, petrochemical and nuclear industries.<br><br>
-
-5 years of experience in digital marketing (SEO, SEM, SMM, geo-targeting, content marketing, strategy and implementation, outsourcing, commissioning merchandise, planning, project management, procurement of services, branding, Excel, Adwords, Analytics, Bing).<br><br>
-
-Bonus: commercial drive and experience, common sense and a pragmatic mindset.<br><br>
-
-I'm available for freelance/remote work, feel free to contact me!
 </p>
 <h3 class="section-header">Skills</h3>
 <hr class="section-hr">
