--- a/index.html
+++ b/index.html
@@ -7,25 +7,18 @@
     <meta name="description" content="Raf Vantongerloo's Portfolio">
     <meta name="keywords" content="Raf Vantongerloo, Personal Website, Personal Blog, Identity, Project Website, Portfolio">
     <meta name="author" content="Raf Vantongerloo">
-    <link rel="icon" href="images/Developer_100.png">
-        <!-- Open Graphic Tags -->
-    <meta property="fb:app_id" content="" />
-    <meta property="og:title" content="">
-    <meta property="og:url" content="">
-    <meta property="og:description" content="Raf Vantongerloo's Portfolio">
-    <meta property="og:image" content="">
-    <link rel="apple-touch-icon" sizes="180x180" href="">
-    <link rel="icon" type="image/png" href="" sizes="32x32">
-    <link rel="icon" type="image/png" href="" sizes="16x16">
-    <link rel="shortcut icon" href="">
+    <link rel="icon" href="images/favicon.ico">
+
     <meta name="theme-color" content="#000000">
 	<meta name="title" content="Raf Vantongerloo | Portfolio">
 	<title>Raf Vantongerloo | Portfolio</title>
 
-  <!-- CSS files -->
-  <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link href="css/style.css" rel="stylesheet">
+	<!-- CSS files -->
+	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="css/style.css" rel="stylesheet">
+
+	<script src="https://kit.fontawesome.com/911724f442.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -57,7 +50,7 @@
     <img src="images/cartoon1.jpg" class="title-image" height="100" width="100">
     <h2>Raf Vantongerloo</h2>
   <hr>
-  <h4 class="typing-tags">Passionate about steel.</h4>
+  <h4 class="typing-tags">Junior Front-end Developer</h4>
   <div>
 </div>
 <div class="social-icons">
@@ -79,11 +72,11 @@
 <hr class="section-hr">
   <ul class="skills_div">
     <li>Web Design Skills:</li><br>
-    <p><span>HTML</span><span>CSS</span><span>Javascript</span><span>NodeJS</span></p><br>
+    <p><span>HTML5</span><span>CSS3</span><span>Bootstrap</span><span>jQuery</span><span>Sass</span><span>React & Redux</span></p><br>
     <li>Programming Skills:</li><br>
-    <p><span>Java</span><span>Android</span><span>SQL</span><span>XML</span><span>UML</span></p><br>
+    <p><span>JavaScript</span><span>D3.js</span><span>Node.js</span><span>Express.js</span><span>MongoDB & Mongoose</span><span>HelmetJS</span><span>AJAX</span></p><br>
     <li>Technologies:</li><br>
-    <p><span>Git</span><span>Maven</span><span>JUnit</span><span>Android Studio</span><span>Spring</span></p>
+    <p><span>GitHub</span><span>NPM</span><span>Chai</span><span>VS Code</span><span>REST</span></p>
   </ul>
 <a href="#projects-section"><i class="fa fa-terminal" title="View Projects" aria-hidden="true" style="font-size:36px"></i></a>
 <hr class="section-end-hr">
