--- a/eva/index.html
+++ b/eva/index.html
@@ -45,14 +45,14 @@
 <div class="container landing-page parallax" style="padding-top:50px" id="home-section">
   <div></div>
   <div class="title-name">
-    <img src="images/cartoon1.jpg" class="title-image" height="100" width="100">
+    <img src="images/cartoon2.png" class="title-image" height="100" width="100">
     <h2>Eva Pardo</h2>
   <hr>
   <h4 class="typing-tags">Personal Coaching / Gezinscounseling</h4>
   <div>
 </div>
 <div class="social-icons">
-<a href="https://www.linkedin.com/in/eva-pardo-59612418/" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+<img width="320" height="240" src="images/boot.png"></img>
 </div>
 <center>telefoonnummer</center><br>
 <a href="#wiebenik-section"><i class="fa fa-angle-double-down" style="font-size:36px"></i></a>
@@ -64,11 +64,9 @@
 <h3 class="section-header">Wie ben ik</h3>
 <hr class="section-hr">
 <p class="about-me-description">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae purus quis libero sagittis aliquet. Mauris est ipsum, pharetra et est vitae, convallis dapibus eros. Etiam posuere sit amet neque nec porttitor. Nulla facilisi. Aenean suscipit sapien a dolor dapibus malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce vitae purus dapibus, vehicula leo at, dapibus lectus. Fusce eget sodales sapien, rutrum porttitor quam.
-<br>
-Curabitur blandit, erat eu pellentesque ullamcorper, dui tellus euismod lectus, nec egestas est dui sed dui. Nulla quis purus lectus. Nunc mauris est, aliquam molestie velit sed, semper gravida ligula. Cras dictum tempus est congue accumsan. Proin et eros mi. Donec in lorem enim. Integer ultricies libero lacus, eget egestas felis venenatis ac. Suspendisse potenti. Quisque semper, neque at accumsan venenatis, sem orci condimentum dolor, vel finibus risus purus sed nisl. Mauris porttitor lacus ut dapibus placerat. Cras pretium erat nec lorem consequat fermentum. Fusce vulputate placerat libero, dictum tristique dui pulvinar non. Nam sit amet imperdiet erat. Vivamus sit amet pharetra sem, consectetur tristique tortor.
-<br>
-Proin volutpat enim a blandit porttitor. Quisque convallis neque a est malesuada ullamcorper. Proin posuere dictum porttitor. Sed tortor velit, bibendum a fringilla id, malesuada eget lectus. In consequat dignissim felis non rhoncus. Duis et scelerisque turpis. Maecenas vel magna eu dolor iaculis euismod sed id mi. Curabitur vitae consequat ante. Sed sit amet tellus suscipit, feugiat ligula eget, lacinia urna. Donec condimentum risus volutpat, feugiat nisi vulputate, sodales lorem.
+Oplossings- en krachtgerichte begeleidingen. Ervaring binnen de bijzondere jeugdzorg, asiel- en gehandicaptensector, ervaring in het werken met mensen met emotionele- en gedragsproblematieken en ontwikkelingsstoornissen. Je kan bij mij terecht met vragen rond verslaving, depressie en levensvragen, indien je (het vermoeden van) ASS hebt, maar ook voor ouderbegeleiding en opvoedings- en gezinsondersteuning. Indien jij een bepaalde verandering in je leven wil of dient te maken en je hier op een of andere manier ondersteuning bij wenst, ook dan ben je bij mij aan het juiste adres.
+<br> 
+Ik biedt begeleiding aan op jouw tempo met oog voor gedrag, gedachten en gevoelens in een sociale context. 
 </p>
 <a href="#aanbod-section"><i class="fa fa-angle-double-down" title="Aanbod" aria-hidden="true" style="font-size:36px"></i></a>
 <hr class="section-end-hr">
@@ -94,11 +92,27 @@ Proin volutpat enim a blandit porttitor. Quisque convallis neque a est malesuada
 <h3 class="section-header">Hoe werk ik</h3>
 <hr class="section-hr">
 <p class="about-me-description">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae purus quis libero sagittis aliquet. Mauris est ipsum, pharetra et est vitae, convallis dapibus eros. Etiam posuere sit amet neque nec porttitor. Nulla facilisi. Aenean suscipit sapien a dolor dapibus malesuada. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce vitae purus dapibus, vehicula leo at, dapibus lectus. Fusce eget sodales sapien, rutrum porttitor quam.
+<strong>Wat mag je van mij verwachten?</strong><br>
+Samen starten. Ik neem de tijd om je te leren kennen en om jou mij te laten leren kennen. We maken samen afspraken voor een goede samenwerking.<br>
+Echtheid. <em>What you see is what you get.</em> Door middel van open en eerlijke communicatie komen we samen tot jouw proces.<br>
+Vanuit een positieve ingesteldheid gaan we op zoek naar je krachten en proberen we samen je valkuilen te ontdekken en te begrijpen.<br>
 <br>
-Curabitur blandit, erat eu pellentesque ullamcorper, dui tellus euismod lectus, nec egestas est dui sed dui. Nulla quis purus lectus. Nunc mauris est, aliquam molestie velit sed, semper gravida ligula. Cras dictum tempus est congue accumsan. Proin et eros mi. Donec in lorem enim. Integer ultricies libero lacus, eget egestas felis venenatis ac. Suspendisse potenti. Quisque semper, neque at accumsan venenatis, sem orci condimentum dolor, vel finibus risus purus sed nisl. Mauris porttitor lacus ut dapibus placerat. Cras pretium erat nec lorem consequat fermentum. Fusce vulputate placerat libero, dictum tristique dui pulvinar non. Nam sit amet imperdiet erat. Vivamus sit amet pharetra sem, consectetur tristique tortor.
+<strong>Opbouw van een begeleidingstraject</strong><br>
+• Kennismaking<br>
+<em>Gratis</em> <br>
+Reken voor een kennismakingsgesprek een 20-tal minuten. Het is een eerste ontmoeting, alvorens jij definitief beslist om met mij in zee te gaan. Je krijgt de kans om vragen te stellen en vervolgens maken we, indien je dit ziet zitten, een afspraak voor het intakegesprek.
 <br>
-Proin volutpat enim a blandit porttitor. Quisque convallis neque a est malesuada ullamcorper. Proin posuere dictum porttitor. Sed tortor velit, bibendum a fringilla id, malesuada eget lectus. In consequat dignissim felis non rhoncus. Duis et scelerisque turpis. Maecenas vel magna eu dolor iaculis euismod sed id mi. Curabitur vitae consequat ante. Sed sit amet tellus suscipit, feugiat ligula eget, lacinia urna. Donec condimentum risus volutpat, feugiat nisi vulputate, sodales lorem.
+    • Intake <br>
+<em>100 euro</em><br>
+Aan de hand van een zeer uitgebreide vragenlijst brengen we samen jouw specifieke situatie in kaart. Afhankelijk van je vraag kan dit tot twee uur duren. We hoeven dit niet in 1 gesprek te doen. Op jouw tempo overlopen we de vragen. Als het te zwaar wordt, kan je dit aangeven en maken we een tweede afspraak. 
+<br>
+    • Sessie<br>
+<em>50 of 75 euro + eventueel verplaatsingskosten</em><br>
+Jij staat aan het roer en bepaalt zelf hoeveel sessies je wenst te volgen. Dit hoef je niet op voorhand te weten en kunnen we samen bekijken, indien je dat wenst. We gaan voor zo kort mogelijk in tijd, maar zo lang als nodig is. 
+<br>
+Er zijn twee soorten sessies mogelijk. Een individuele sessie of een gezinssessie. Voor een individueel gesprek is het enkel jij en ik en ligt de kostprijs wat lager. Een gezinssessie kan met 1 of meerdere leden van jouw gezin bij zijn. Afhankelijk van hoe jullie het zien en welke vraag er is.<br>
+<br>
+De gesprekken vinden op een door jou gekozen locatie plaats. Dat kan in mijn praktijk, bij jouw thuis of op een andere locatie. In de laatste twee gevallen betaal je bovenop de vaste sessieprijs ook een supplementair bedrag voor mijn verplaatsingskosten. Het exacte bedrag zal ik bij het boeken van de afspraak meedelen.
 </p>
 <a href="#afspraak-section"><i class="fa fa-terminal" title="Afspraak" aria-hidden="true" style="font-size:36px"></i></a>
 <hr class="section-end-hr">
