--- a/bakeandshake/index.html
+++ b/bakeandshake/index.html
@@ -1,4 +1,4 @@
-f<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>Bake&Shake</title>
@@ -314,11 +314,10 @@ body, html {
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
 	  <br><br>
-        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Groenhoef 30, Scherpenheuvel-Zichem, België<br><br>
+        <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Koning Boudewijnstraat 2, Scherpenheuvel-Zichem, België<br><br>
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> GSM: 0498 11 60 49<br><br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: <a href="mailto:info@bake-and-shake.com">info@bake-and-shake.com</a><br><br>
 		<i class="fa fa-facebook-official fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Volg ons op <a href="https://www.facebook.com/BakeShake-1632109637049522/">Facebook</a>!<br><br>
-		<i class="fa fa-eur fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Onze prijslijst vindt u <a href="images/new/prijslijst.jpg">hier</a>!<br>
       </div>
     </div>
   </div>
@@ -334,7 +333,7 @@ body, html {
 <script>
 function myMap()
 {
-  myCenter=new google.maps.LatLng(50.97222829806514, 4.94949989888662);
+  myCenter=new google.maps.LatLng(50.977259, 4.977773);
   var mapOptions= {
     center:myCenter,
     zoom:12, scrollwheel: true, draggable: true,
