Changed links to rafv.com and RP.io

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 <hr class="section-hr">
 <div class="projects_div">
   <div class="project_subdiv" style="background-image:url(images/space3.jpg)">
-    <h3>"Oep de Haa" App</h3>
-    <p>The "Oep de Haa" App is a simple app that aims to preserve the local dialect of a small rural community in the Flemish part of Belgium, called "Veerle-Heide" (pronounced Veijel-Haa).</p>
+    <h3>My new homepage</h3>
+    <p>Everything you want to know about <a href="http://www.rafvantongerloo.com/" target="_blank"><strong>Raf Vantongerloo</strong></a> is right there.</p>
   </div>
   <div class="project_subdiv" style="background-image:url(images/space3.jpg)">
     <h3>My Portfolio Website</h3>
@@ -108,9 +108,9 @@
 	<br>My Lightning Node can be visited <a href="https://1ml.com/node/02b4a0d6540a7b6199115ccf851bb73ae776dbb5087d495830f6c3950b4346ee75" target="_blank"><strong>here</strong></a>.</p>
   </div>
   <div class="project_subdiv" style="background-image:url(images/space3.jpg)">
-    <h3>Bake-and-Shake.com</h3>
-    <p>With its base template looking suspiciously like the one I used for this Portfolio page (never fix what is not broken ;) ), I created the website for
-	<a href="http://www.bake-and-shake.com/" target="_blank"><strong>Bake-and-Shake</strong></a>, which is a project by a nephew of mine.<br><br>Basic HTML, CSS and some copy-paste.</p>
+    <h3>Rocketproof.io</h3>
+    <p>My first SaaS (or rather BaaS: Backlinks-as-a-Service). We do the (automated) outreach, you reap the rewards! White hat, SaaS-relevant 
+	<a href="https://rocketproof.io/" target="_blank"><strong>backlinks</strong></a>.</p>
   </div>
   <div class="project_subdiv" style="background-image:url(images/space3.jpg)">
     <h3>R4Fchain</h3>
